@@ -202,16 +202,6 @@ This moves {\ident} at the top of the local context (at the beginning of the con
 
 This moves {\ident} at the bottom of the local context (at the end of the context).
 
-\item {\tt move dependent {\ident$_1$} after {\ident$_2$}}\\
-      {\tt move dependent {\ident$_1$} before {\ident$_2$}}\\
-      {\tt move dependent {\ident$_1$} at top}\\
-      {\tt move dependent {\ident$_1$} at bottom}
-
-This moves {\ident$_1$} towards the specified place. All the
-hypotheses that recursively depend on, for a downwards move, or
-in, for an upwards move, the hypothesis {\ident$_1$} are moved
-too so as to respect the order of dependencies between hypotheses.
-
 \end{Variants}
 
 \begin{ErrMsgs}
