@@ -26,7 +26,7 @@ type argument_type =
   | StringArgType
   | PreIdentArgType
   | IntroPatternArgType
-  | IdentArgType
+  | IdentArgType of bool
   | VarArgType
   | RefArgType
   (* Specific types *)
@@ -126,9 +126,17 @@ let rawwit_intro_pattern = IntroPatternArgType
 let globwit_intro_pattern = IntroPatternArgType
 let wit_intro_pattern = IntroPatternArgType
 
-let rawwit_ident = IdentArgType
-let globwit_ident = IdentArgType
-let wit_ident = IdentArgType
+let rawwit_ident_gen b = IdentArgType b
+let globwit_ident_gen b = IdentArgType b
+let wit_ident_gen b = IdentArgType b
+
+let rawwit_ident = rawwit_ident_gen true
+let globwit_ident = globwit_ident_gen true
+let wit_ident = wit_ident_gen true
+
+let rawwit_pattern_ident = rawwit_ident_gen false
+let globwit_pattern_ident = globwit_ident_gen false
+let wit_pattern_ident = wit_ident_gen false
 
 let rawwit_var = VarArgType
 let globwit_var = VarArgType
