@@ -105,6 +105,15 @@ GEXTEND Gram
   ;
 END
 
+GEXTEND Gram
+  GLOBAL: locality non_locality;
+  locality:
+    [ [ IDENT "Global" -> false | IDENT "Local" -> true | -> false ] ]
+  ;
+  non_locality:
+    [ [ IDENT "Global" -> false | IDENT "Local" -> true | -> true ] ]
+  ;
+END
 
 let test_plurial_form = function
   | [(_,([_],_))] ->
@@ -440,10 +449,10 @@ GEXTEND Gram
 
   gallina_ext:
     [ [ (* Transparent and Opaque *)
-        IDENT "Transparent"; l = LIST1 global ->
-          VernacSetOpacity (true,[Conv_oracle.transparent,l])
-      | IDENT "Opaque"; l = LIST1 global ->
-          VernacSetOpacity (true,[Conv_oracle.Opaque, l])
+        IDENT "Transparent"; b = non_locality; l = LIST1 global ->
+          VernacSetOpacity (b,[Conv_oracle.transparent,l])
+      | IDENT "Opaque"; b = non_locality; l = LIST1 global ->
+          VernacSetOpacity (b,[Conv_oracle.Opaque, l])
       | IDENT "Strategy"; l =
           LIST1 [ lev=strategy_level; "["; q=LIST1 global; "]" -> (lev,q)] ->
             VernacSetOpacity (false,l)
@@ -788,7 +797,7 @@ GEXTEND Gram
 ;;
 
 (* Grammar extensions *)
-	  
+
 GEXTEND Gram
   GLOBAL: syntax;
 
@@ -805,7 +814,7 @@ GEXTEND Gram
      | IDENT "Bind"; IDENT "Scope"; sc = IDENT; "with"; 
        refl = LIST1 class_rawexpr -> VernacBindScope (sc,refl)
 
-     | IDENT "Arguments"; IDENT "Scope"; local = non_globality; qid = global;
+     | IDENT "Arguments"; IDENT "Scope"; local = non_locality; qid = global;
        "["; scl = LIST0 opt_scope; "]" -> VernacArgumentsScope (local,qid,scl)
 
      | IDENT "Infix"; local = locality;
@@ -836,12 +845,6 @@ GEXTEND Gram
   ;
   tactic_level:
     [ [ "("; "at"; IDENT "level"; n = natural; ")" -> n | -> 0 ] ]
-  ;
-  locality:
-    [ [ IDENT "Global" -> false | IDENT "Local" -> true | -> false ] ]
-  ;
-  non_globality:
-    [ [ IDENT "Global" -> false | IDENT "Local" -> true | -> true ] ]
   ;
   level:
     [ [ IDENT "level"; n = natural -> NumLevel n
