@@ -62,6 +62,7 @@ Vernacular commands
   conversion tests. It generalizes commands Opaque and Transparent by
   introducing a range of levels. Lower levels are assigned to constants
   that should be expanded first.
+- New options Global and Local to Opaque and Transparent.
 - New command "Print Assumptions" to display all variables, parameters
   or axioms a theorem or definition relies on.
 - "Add Rec LoadPath" now provides references to libraries using partially
